generic-vpc.tf

resource "aws_vpc" "generic" {
    cidr_block = "${var.vpc_cidr}"
    enable_dns_hostnames = true
    tags = {
        name = "${var.name}-${var.environment}"
        project = "${var.project}"
        owner = "${var.owner}"
        environment = "${var.environment}"
    }
}

resource "aws_internet_gateway" "generic" {
    vpc_id = "${aws_vpc.generic.id}"
}

/*
  Public Subnet
*/
resource "aws_subnet" "us-east-2a-public" {
    vpc_id = "${aws_vpc.generic.id}"

    cidr_block = "${cidrsubnet(var.vpc_cidr, 4, 1)}"
    availability_zone = "us-east-2a"

    tags {
        Name = "Public Subnet"
    }
}

resource "aws_route_table" "us-east-2a-public" {
    vpc_id = "${aws_vpc.generic.id}"

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = "${aws_internet_gateway.generic.id}"
    }

    tags {
        Name = "Public Subnet"
    }
}

resource "aws_route_table_association" "us-east-2a-public" {
    subnet_id = "${aws_subnet.us-east-2a-public.id}"
    route_table_id = "${aws_route_table.us-east-2a-public.id}"
}
